# car

./: .editorconfig  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  Great_Britain_Circuit.avif  INTEGRATION_TEST_ANALYSIS.md  PERFORMANCE_TEST.md  README.md  car-spec.md  generate-se.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts
physics-engine/: Cargo.toml  PERF_NOTES.md
physics-engine/docs/: pacejka_research.md  weather-sources.md
physics-engine/src/: active_aero.rs  brakes.rs  curb.rs  engine.rs  engine_temp.rs  ers.rs  lib.rs  pit_lane.rs  surface.rs  terrain.rs  tires.rs  track_temperature.rs  types.rs  utils.rs  weather.rs  wind.rs
physics-engine/src/car_physics/: aerodynamics.rs  clutch.rs  differential.rs  drift.rs  driveshaft.rs  fuel.rs  mod.rs  override_mode.rs  powertrain.rs  steering.rs  tire_model.rs  (+4 more)
physics-engine/tests/: ai_runner_loader.rs  calibration.rs  calibration_drift.rs  calibration_strict.rs  capture_baselines.rs  capture_wave_3_baselines.rs  capture_wave_4_baselines.rs  evo_determinism.rs  evo_parallel_smoke.rs  ghost_writer.rs  integration.rs  lateral_symmetry.rs  lookahead_baseline.rs  lookahead_tau_probe.rs  packed_ffi_equivalence.rs  perf_baseline.rs  realism_anchors_2026.rs  reset_for_replay.rs  soak.rs  stability.rs  track_centerline_flat.rs  track_geometry.rs  wasm_bindings.rs  wheel_force_capture.rs  wheel_force_equivalence.rs  wheel_spin.rs  wheel_spin_capture.rs  wheel_spin_equivalence.rs
(+1417 files in other folders)
