[package]
name = "car-physics-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance physics engine for car racing game"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
rustc-hash = "1.1"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
serde_json = "1.0.149"
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
